--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Hello from EC2 Ubuntu Server</h1>
-    <p>Version 1 - Initial deployment</p>
+    <p>Version 2 - Modified from GitHub</p>
 </body>
 </html>
 
