--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Hello from EC2 Ubuntu Server</h1>
-    <p>Version 3 - Feature UI Update from EC2 Branch</p>
+    <p>Version 3 - Feature UI Update from EC2 BrancH</p>
 </body>
 </html>
 
