Update title from 'DevOps Demo' to 'Production app'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Manoj AWS DevOps Demo</title>
+    <title>Manoj AWS Production app</title>
 </head>
 <body>
     <h1>Hello from EC2 Ubuntu Server</h1>
